[tool.poetry]
name = "markdown-site-utils"
version = "0.2.1"
description = "Some utilities for managing Markdown files with metadata."
authors = ["Jacob Smullyan <smulloni@smullyan.org>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/smulloni/markdown_site_utils"
packages = [{include = "mdsite"}]
include = [
    {path="mdsite/testdata/*"},
    {path="mdsite/testdata/conflict/*"},
]

[tool.poetry.dependencies]
python = "^3.11"
MarkupSafe = "^2.1.2"
PyYAML = "^6.0"
markdown2 = "^2.4.8"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
ipython = "^8.12.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
